--- a/popup.html
+++ b/popup.html
@@ -54,7 +54,7 @@
   <main>
     <form id="form-download">
       <h2>Xuất dữ liệu</h2>
-      <div class='form-select'>
+      <!-- <div class='form-select'>
         <div>
           <p for="chedoxem">Chế độ xem dữ liệu</p>
           <select id="chedoxem">
@@ -77,7 +77,7 @@
             <option value="hoatdong">Hoạt động</option>
           </select>
         </div>
-      </div>
+      </div> -->
       <div style="display: flex; justify-content: space-between; align-items: center;">
         <button>
           Bắt đầu đồng bộ dữ liệu
