--- a/popup.html
+++ b/popup.html
@@ -79,7 +79,7 @@
         </div>
       </div> -->
       <div style="display: flex; justify-content: space-between; align-items: center;">
-        <button>
+        <button id="btn-dongbo">
           Bắt đầu đồng bộ dữ liệu
         </button> 
         <div class="time" id="time" style="font-size: 16px; font-weight: 500;"></div>
